# udi-dicom-evidence-validator

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  NOTICE  README.md  SECURITY.md  codemeta.json  codex-review-public-v0.1.md  llms.txt  pyproject.toml  release-readiness-v0.1.0.md
artifacts/: archive-metadata-report-v0.6.json  archive-metadata-report-v0.6.md  citation-metadata-consistency-v0.8.json  citation-metadata-consistency-v0.8.md  public_evaluation_matrix.json
docs/: agent-usage.md  archive-metadata-review.md  boundary.md  citation-and-archiving.md  citation-metadata-consistency-v0.8.md  citation-version-policy.md  claims-to-avoid.md  compatibility-matrix.md  cooperation-brief.md  doi-archive-review-v0.8.md  doi-capture-audit-v1.0.1-public.md  doi-capture-record-v0.8.1.md  doi-capture-v1.0.1-public.md  doi-post-publication-update-plan.md  doi-readiness-v0.6.md  error-codes.md  external-feedback-intake-v0.6.md  external-review-10min.md  fdo-mapping.md  figure-build-notes.md  github-issues-v0.1.md  golden-regression.md  index.md  issue-label-policy-v0.6.md  mcp-public-tools.md  mcp-roadmap.md  no-fake-doi-policy-v0.8.md  paper-finalization-bundle-v0.8.md  paper-finalization-gate-v0.8.md  paper-submission-workflow-v0.6.md  project-map.md  project-plan.md  public-evaluation-matrix.md  receipt-explainer.md  release-audit-2026-06-11.md  remote-reproducibility.md  reproducibility-capsule-v0.5.md  reproducibility-for-reviewers.md  reproducibility-status-20260604.md  reviewer-expected-outputs-v0.5.md  (+8 more)
openapi/: validator.openapi.yaml
(+217 files in other folders)
